# atomtex-esp32

./: .gitignore  CMakeLists.txt  README.en.md  README.md  SKILL.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/bdkg05/: CMakeLists.txt  bdkg05.c
components/bdkg05/include/: bdkg05.h
components/bdkg05/test/: test_bdkg05.c
components/bdkg_log/: CMakeLists.txt  bdkg_log.c
components/bdkg_log/include/: bdkg_log.h
components/bdkg_mqtt/: CMakeLists.txt  bdkg_mqtt.c
components/bdkg_mqtt/include/: bdkg_mqtt.h
components/bdkg_usb/: CMakeLists.txt  bdkg_usb.c
components/bdkg_usb/include/: bdkg_usb.h
components/modbus_rtu/: CMakeLists.txt  modbus_rtu.c
components/modbus_rtu/include/: modbus_rtu.h
components/modbus_rtu/test/: test_modbus.c
docs/: dosimeter-ui-commands.ref.md
main/: CMakeLists.txt  boot_config.c  boot_config.h  idf_component.yml  main.c  tz_config.c  tz_config.h  web_server.c  wifi_manager.c  wifi_manager.h
web/: bdkg.html  bdkg_system.html  setup.html
